--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -1,4 +1,27 @@
-$var : red;
-body {
-    background: $var;
+.custom-icon{
+    max-width: 22px;
+}
+
+.custom-logo{
+    max-width: 190px;
+}
+
+.custom-btn{
+    max-width: 60px;
+}
+
+.absolute{
+    position: absolute;
+    margin: 6px 6px;
+    z-index: 23;
+}
+
+.btn-content{
+    margin: 1px !important;
+    padding: 0 4px !important;
+}
+
+.router-link{
+    color: black !important;
+    text-decoration: none !important;
 }
