--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,9 @@
 .custom-logo {
   max-width: 190px; }
 
+.custom-logo2 {
+  max-width: 40px; }
+
 .custom-btn {
   max-width: 60px; }
 
@@ -19,3 +22,70 @@
 .router-link {
   color: #000 !important;
   text-decoration: none !important; }
+
+.App-logo {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 100px;
+  margin-top: -50px;
+  margin-left: -55px; }
+
+.navbar-custom {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #dcdcdc; }
+
+.in-navbar-custom {
+  padding-top: 1px !important;
+  padding-bottom: 1px !important; }
+
+@media only screen and (max-width: 480px) {
+  .input-custom {
+    display: none !important; }
+  .hide-icon {
+    display: none !important; } }
+
+.input-custom {
+  width: 480px; }
+
+.custom-card-border {
+  border: 1px solid #d0d9e8 !important; }
+
+.video-slot {
+  position: relative;
+  z-index: 22; }
+
+.video-time {
+  position: absolute;
+  right: 0;
+  bottom: 1vh;
+  margin-bottom: 0;
+  z-index: 23;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.3); }
+
+@-moz-keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@-webkit-keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@-o-keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
