--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -6,6 +6,10 @@
     max-width: 190px;
 }
 
+.custom-logo2{
+    max-width: 40px;
+}
+
 .custom-btn{
     max-width: 60px;
 }
@@ -24,4 +28,63 @@
 .router-link{
     color: black !important;
     text-decoration: none !important;
+}
+
+.App-logo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 100px;
+    margin-top: -50px;
+    margin-left: -55px;
+}
+
+@keyframes App-logo-spin {
+   from { transform: rotate(0deg); }
+   to { transform: rotate(360deg); }
+}
+
+.navbar-custom{
+    //max-height: 50px;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    background-color: rgb(245,245,245);
+    border-bottom: 1px solid rgb(220, 220, 220); 
+}
+.in-navbar-custom{
+    padding-top: 1px !important;
+    padding-bottom: 1px !important;
+}
+
+@media only screen and (max-width : 480px) {
+    .input-custom{
+        display: none !important;
+    }
+    .hide-icon{
+        display: none !important;
+    }
+}
+    
+
+.input-custom{
+    width: 480px;
+}
+
+.custom-card-border{
+    border: 1px solid #d0d9e8 !important;
+}
+
+.video-slot{
+    position: relative;
+    z-index: 22;
+}
+
+.video-time{
+    position: absolute;
+    right: 0;
+    bottom: 1vh;
+    margin-bottom: 0;
+    z-index: 23;
+    color: #fff;
+    background: rgba(0,0,0,0.3);
 }
