--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -64,6 +64,8 @@
         display: none !important;
     }
 }
+
+
     
 
 .input-custom{
@@ -88,3 +90,70 @@
     color: #fff;
     background: rgba(0,0,0,0.3);
 }
+
+.masonry {
+    margin: 1.5em 0;
+    padding: 0;
+    column-gap: 1.5em; /* Общее расстояние между колонками */
+    font-size: .85em;
+    -moz-column-gap: 1.5em; /* Расстояние между колонками для Firefox */
+    -webkit-column-gap: 1.5em; /* Расстояние между колонками  для Safari, Chrome и iOS */
+}
+ 
+/* Элементы в виде плиток с содержанием */
+.item {
+    display: inline-block;
+    background: #fff;
+    padding: 1px;
+    margin: 0 0 1.5em;
+    width: 100%;
+}
+
+/* Стили картинок, видое и фреймов внутри адаптивных плиток */
+// iframe {
+//     max-width: 100%;
+//     height: auto;
+//     display: block;
+//     }
+     
+     
+    /* Стили ссылок при наведении */
+     
+    /* Медиа-запросы для различных размеров адаптивного макета */
+    @media only screen and (min-width: 400px) {
+        .masonry {
+            -moz-column-count: 1;
+            -webkit-column-count: 1;
+            column-count: 1;
+        }
+    }
+     
+    @media only screen and (min-width: 700px) {
+        .masonry {
+            -moz-column-count: 2;
+            -webkit-column-count: 2;
+            column-count: 2;
+        }
+    }
+     
+    @media only screen and (min-width: 900px) {
+        .masonry {
+            -moz-column-count: 3;
+            -webkit-column-count: 3;
+            column-count: 3;
+        }
+    }
+     
+    @media only screen and (min-width: 1100px) {
+        .masonry {
+            -moz-column-count: 3;
+            -webkit-column-count: 3;
+            column-count: 3;
+        }
+    }
+     
+    @media only screen and (min-width: 1280px) {
+        .wrapper {
+            width: 1260px;
+        }
+    }
