--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -52,6 +52,14 @@
     border-bottom: 1px solid rgb(220, 220, 220); 
     -webkit-transform: translate3d(0, 0, 0);
 }
+.navbar-guest-custom{
+    //max-height: 50px;
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;
+    background-color: rgb(245,245,245);
+    border-bottom: 1px solid rgb(220, 220, 220); 
+    -webkit-transform: translate3d(0, 0, 0);
+}
 
 .in-navbar-custom{
     padding-top: 1px !important;
