--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -1,6 +1,5 @@
 .custom-icon{
     width: 22px;
-
 }
 
 .custom-logo{
@@ -30,6 +29,16 @@
     color: black !important;
     text-decoration: none !important;
 }
+.centering{
+    float: none;
+    margin: 0 auto;
+}
+
+.card-custom{
+    margin: 10px !important;
+}
+
+.three { top: 50px; left: 55px; z-index: 5; }
 
 .App-logo {
     position: fixed;
@@ -75,11 +84,23 @@
         display: none !important;
     }
 }
+
+
+.centering {
+    float:none;
+    margin:0 auto;
+}
     
 .container-margin-top{
     margin-top: 80px;
     padding-left: 50px !important;
     padding-right: 50px !important;
+}
+
+.container-margin-top-feed{
+    margin-top: 80px;
+    padding-left: 300px !important;
+    padding-right: 300px !important;
 }
 
 .input-custom{
