--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,7 @@
   margin: 0 auto; }
 
 .card-custom {
-  margin: 10px !important; }
+  margin-bottom: 10px !important; }
 
 .three {
   top: 50px;
@@ -68,19 +68,29 @@
   .hide-icon {
     display: none !important; } }
 
+@media only screen and (max-width: 845px) {
+  .input-custom {
+    display: none !important; }
+  .hide-icon {
+    display: none !important; } }
+
+@media only screen and (max-width: 992px) {
+  .hide-icon {
+    display: none !important; } }
+
+@media only screen and (max-width: 1060px) {
+  .hide-icon {
+    display: none !important; } }
+
 .centering {
   float: none;
   margin: 0 auto; }
 
 .container-margin-top {
-  margin-top: 80px;
-  padding-left: 50px !important;
-  padding-right: 50px !important; }
+  margin-top: 80px; }
 
 .container-margin-top-feed {
-  margin-top: 80px;
-  padding-left: 300px !important;
-  padding-right: 300px !important; }
+  margin-top: 80px; }
 
 .input-custom {
   width: 480px; }
@@ -161,6 +171,33 @@
   color: #fff;
   /* Цвет текста */
   -webkit-transform: translate3d(0, 0, 0); }
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto; }
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px; } }
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px !important; } }
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1000px !important; } }
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1100px !important; } }
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1200px !important; } }
 
 @-moz-keyframes App-logo-spin {
   from {
