--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -35,7 +35,7 @@
 }
 
 .card-custom{
-    margin: 10px !important;
+    margin-bottom: 10px !important;
 }
 
 .three { top: 50px; left: 55px; z-index: 5; }
@@ -85,6 +85,27 @@
     }
 }
 
+@media only screen and (max-width : 845px) {
+    .input-custom{
+        display: none !important;
+    }
+    .hide-icon{
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width : 992px) {
+    .hide-icon{
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width : 1060px) {
+    .hide-icon{
+        display: none !important;
+    }
+}
+
 
 .centering {
     float:none;
@@ -93,14 +114,14 @@
     
 .container-margin-top{
     margin-top: 80px;
-    padding-left: 50px !important;
-    padding-right: 50px !important;
+    //padding-left: 100px !important;
+    //padding-right: 100px !important;
 }
 
 .container-margin-top-feed{
     margin-top: 80px;
-    padding-left: 300px !important;
-    padding-right: 300px !important;
+    //padding-left: 300px !important;
+    //padding-right: 300px !important;
 }
 
 .input-custom{
@@ -205,3 +226,41 @@
     //z-index: 50;
     -webkit-transform: translate3d(0, 0, 0)
 }
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      max-width: 768px !important;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .container {
+      max-width: 1000px !important;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1100px !important;
+    }
+  }
+  
+  @media (min-width: 1400px) {
+    .container {
+      max-width: 1200px !important;
+    }
+  }
