add VisabilitySensor for play video while in-viewport

--- a/public/style.css
+++ b/public/style.css
@@ -199,6 +199,9 @@
   .container {
     max-width: 1200px !important; } }
 
+.elem {
+  border: 10px solid #000; }
+
 @-moz-keyframes App-logo-spin {
   from {
     transform: rotate(0deg); }
