--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -20,25 +20,21 @@
     z-index: 23;
 }
 
-.btn-content{
-    margin: 1px !important;
-    padding: 0 4px !important;
-}
+// .btn-content{
+//     margin: 1px !important;
+//     padding: 0 4px !important;
+// }
 
 .router-link{
     color: black !important;
     text-decoration: none !important;
-}
-.centering{
-    float: none;
-    margin: 0 auto;
 }
 
 .card-custom{
     margin-bottom: 10px !important;
 }
 
-.three { top: 50px; left: 55px; z-index: 5; }
+//.three { top: 50px; left: 55px; z-index: 5; }
 
 .App-logo {
     position: fixed;
@@ -49,10 +45,10 @@
     margin-left: -55px;
 }
 
-@keyframes App-logo-spin {
-   from { transform: rotate(0deg); }
-   to { transform: rotate(360deg); }
-}
+// @keyframes App-logo-spin {
+//    from { transform: rotate(0deg); }
+//    to { transform: rotate(360deg); }
+// }
 
 .navbar-custom{
     //max-height: 50px;
@@ -105,23 +101,11 @@
         display: none !important;
     }
 }
-
-
-.centering {
-    float:none;
-    margin:0 auto;
-}
     
 .container-margin-top{
     margin-top: 80px;
     //padding-left: 100px !important;
     //padding-right: 100px !important;
-}
-
-.container-margin-top-feed{
-    margin-top: 80px;
-    //padding-left: 300px !important;
-    //padding-right: 300px !important;
 }
 
 .input-custom{
@@ -147,72 +131,82 @@
     background: rgba(0,0,0,0.3);
 }
 
-.masonry {
-    margin: 1.5em 0;
-    padding: 0;
-    column-gap: 1.5em; /* Общее расстояние между колонками */
-    -moz-column-gap: 1.5em; /* Расстояние между колонками для Firefox */
-    -webkit-column-gap: 1.5em; /* Расстояние между колонками  для Safari, Chrome и iOS */
+.container {
     width: 100%;
-}
- 
-/* Элементы в виде плиток с содержанием */
-.item {
-    display: inline-block;
-    background: #fff;
-    padding: 1px;
-    margin: 0 0 1.5em;
-    width: 100%
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-/* Стили картинок, видое и фреймов внутри адаптивных плиток */
-// iframe {
-//     max-width: 100%;
-//     height: auto;
-//     display: block;
-//     }
-     
-     
-    /* Стили ссылок при наведении */
-     
-    /* Медиа-запросы для различных размеров адаптивного макета */
-    @media only screen and (min-width: 400px) {
-        .masonry {
-            -moz-column-count: 1;
-            -webkit-column-count: 1;
-            column-count: 1;
-        }
+.feed-container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+  
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px !important;
     }
-     
-    @media only screen and (min-width: 700px) {
-        .masonry {
-            -moz-column-count: 2;
-            -webkit-column-count: 2;
-            column-count: 2;
-        }
+    .feed-container {
+        max-width: 576px !important;
     }
-     
-    @media only screen and (min-width: 900px) {
-        .masonry {
-            -moz-column-count: 3;
-            -webkit-column-count: 3;
-            column-count: 3;
-        }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      max-width: 768px !important;
     }
-     
-    @media only screen and (min-width: 1100px) {
-        .masonry {
-            -moz-column-count: 3;
-            -webkit-column-count: 3;
-            column-count: 3;
-        }
+    .feed-container {
+        max-width: 576px !important;
     }
-     
-    @media only screen and (min-width: 1280px) {
-        .wrapper {
-            width: 1260px;
-        }
+  }
+  
+  @media (min-width: 1024px) {
+    .container {
+      max-width: 1000px !important;
     }
+    .feed-container {
+        max-width: 576px !important;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1100px !important;
+    }
+    .feed-container {
+        max-width: 576px !important;
+    }
+  }
+  
+  @media (min-width: 1400px) {
+    .container {
+      max-width: 1200px !important;
+    }
+    .feed-container {
+        max-width: 576px !important;
+    }
+  }
+
+.notify-container {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1030;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    //align-items: flex-start;
+    //align-content: flex-start;
+    //height: 58px;
+}
 
 .custom-footer{
     border-top: 3px solid;
@@ -222,49 +216,8 @@
     padding: 10px; /* Поля вокруг текста */
     background: #292929ea; /* Цвет фона */
     color: #fff; /* Цвет текста */
-    // width: 100%; /* Ширина слоя */
-    //z-index: 50;
+    width: 100%; /* Ширина слоя */
+    z-index: 1000;
+    //max-height: 58px;
     -webkit-transform: translate3d(0, 0, 0)
 }
-
-.container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  
-  @media (min-width: 576px) {
-    .container {
-      max-width: 540px;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .container {
-      max-width: 768px !important;
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .container {
-      max-width: 1000px !important;
-    }
-  }
-
-  @media (min-width: 1200px) {
-    .container {
-      max-width: 1100px !important;
-    }
-  }
-  
-  @media (min-width: 1400px) {
-    .container {
-      max-width: 1200px !important;
-    }
-  }
-
-  .elem{
-      border: 10px solid black
-  }
