--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,65 @@
 .input-search::-webkit-input-placeholder {
   padding-left: 50px; }
 
+.video {
+  position: relative; }
+
+.controls-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: 5px;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  -ms-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  z-index: 1030;
+  background-color: transparent; }
+
+.video:hover .controls-container {
+  opacity: 1; }
+
+.element-btn:hover {
+  cursor: pointer; }
+
+.custom-icon-video-controls {
+  width: 22px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px; }
+
+.time {
+  margin-top: 3px;
+  font-size: 100%;
+  color: #fff;
+  width: 100%;
+  vertical-align: middle; }
+
+.progress-bar {
+  position: relative;
+  background-color: #dcdcdc;
+  border: 0;
+  height: 5px;
+  width: 100%;
+  border-radius: 9px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px; }
+
+.progress-bar::-webkit-progress-bar {
+  background-color: #dcdcdc; }
+
+.progress-bar::-webkit-progress-value {
+  background-color: #009eff; }
+
+.progress-bar::-moz-progress-bar {
+  background-color: #009eff; }
+
 .custom-icon {
   width: 22px; }
 
@@ -173,7 +232,7 @@
   border-color: #5c5c5c;
   padding: 10px;
   /* Поля вокруг текста */
-  background: rgba(41, 41, 41, 0.918);
+  background: rgba(41, 41, 41, 0.596);
   /* Цвет фона */
   color: #fff;
   /* Цвет текста */
