--- a/src/assets/stylesheets/videoPlayer.scss
+++ b/src/assets/stylesheets/videoPlayer.scss
@@ -1,5 +1,19 @@
+.video-container{
+  position: relative;
+}
+.figure-custom {
+	// max-width:1024px;
+	// max-width:64rem;
+	width:100%;
+	height:auto;
+	// margin:20px 0 0;
+	// margin:1.25rem 0 0;
+}
+
 .video{
-	position: relative;
+    position: relative;
+    width:100%;
+    height:auto;
 }
 .controls-container{
   position: absolute;
@@ -18,7 +32,7 @@
   // right: 0;
   // bottom: 0;
   // left: 0;
-   z-index: 1030;
+  z-index: 2147483647;
 
   // display: flex;
   // flex-direction: column;
@@ -156,4 +170,11 @@
 
 .volume-bar:focus{
   outline: none;
+}
+
+html:-ms-fullscreen {
+	width:100%;
+}
+:-webkit-full-screen {
+	background-color:transparent;
 }
