--- a/src/assets/stylesheets/search.scss
+++ b/src/assets/stylesheets/search.scss
@@ -3,7 +3,7 @@
     //display: block;
     width: 100%;
     min-height: 42px;
-    background-color: rgb(245,245,245);
+    background-color:#fff;
     text-align: center;
 }
 .input-search:focus{
