--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -56,8 +56,8 @@
 
 .navbar-custom{
     //max-height: 50px;
-    padding-left: 50px !important;
-    padding-right: 50px !important;
+    // padding-left: 100px !important;
+    // padding-right: 100px !important;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     background-color: #fff;
@@ -66,8 +66,8 @@
 }
 .navbar-guest-custom{
     min-height: 48px;
-    padding-left: 68px !important;
-    padding-right: 68px !important;
+    // padding-left: 68px !important;
+    // padding-right: 68px !important;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     background-color: #fff;
@@ -202,6 +202,18 @@
     }
     .feed-container {
         max-width: 680px !important;
+    } 
+  }
+
+  @media (min-width: 2000px) {
+    .navbar-custom{
+        padding-left: 500px !important;
+        padding-right: 500px !important;
+        
+    }
+    .navbar-guest-custom{
+        padding-left: 500px !important;
+        padding-right: 500px !important;
     }
   }
 
