--- a/src/assets/stylesheets/videoPlayer.scss
+++ b/src/assets/stylesheets/videoPlayer.scss
@@ -20,7 +20,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin-bottom: 5px;
+	margin-bottom: 6px;
 	opacity: 0;
 	-webkit-transition: opacity .5s;
 	-moz-transition: opacity .5s;
@@ -195,4 +195,6 @@ html:-ms-fullscreen {
 :-webkit-full-screen {
   background-color:transparent;
   vertical-align: middle;
+  position: absolute;
+  padding-top: 6px;
 }
