--- a/src/assets/stylesheets/videoPlayer.scss
+++ b/src/assets/stylesheets/videoPlayer.scss
@@ -70,17 +70,16 @@
   position: relative;
   width: 100%;
   background-color: rgba(0, 0, 0, 0) !important;
-  // margin-top: 5px; 
-  // margin-left: 5px;
-  // margin-right: 5px;
-  // margin-bottom: 5px;
   border: 0;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .progress-bar{
   -webkit-appearance: none;
-  position: relative;
-  background-color:  #dcdcdc !important;
+  position: absolute;
+  background-color:transparent;
+  background-color:  rgba(0, 0, 0, 0) !important;
   height: 5px;
   width: 100%;
   border: 0;
@@ -89,7 +88,7 @@
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 5px;
-  
+  z-index: 10000;
 }
 
 .progress-bar::-webkit-slider-thumb {
@@ -100,28 +99,58 @@
   border-radius: 50%; 
   background: #ffffff;
   cursor: pointer;
-  z-index: 5000;
+  z-index: 10000;
+  background-color:transparent;
+  background-color:  rgba(0, 0, 0, 0) !important;
 }
 
 .progress-bar::-moz-range-thumb {
+  position: relative;
   width: 15px;
   height: 15px;
   border-radius: 50%;
   background: #ffffff;
   cursor: pointer;
-  z-index: 5000;
+  z-index: 10000;
+  background-color:transparent;
+  background-color:  rgba(0, 0, 0, 0) !important;
 }
-.viewed{
-  -webkit-appearance: none;
-  position: absolute;
+.viewed-progress{
+  position: relative;
   background-color: #009eff;
+  height: 5px;
+  border: 0;
+  border-radius: 0px;
+  margin-top: 5px; 
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 5px;
+  z-index: 2000;
+}
+
+.point-progress{
+  position: relative;
+  background-color: #ffffff;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%; 
+  margin-top: 0px; 
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  z-index: 3000;
+}
+
+.total-progress{
+  position: absolute;
+  background-color: #ffffff;
   height: 5px;
   width: 100%;
   border: 0;
   border-radius: 9px;
   margin-top: 5px; 
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
   margin-bottom: 5px;
   z-index: 1000;
 }
