--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,12 @@
 .input-search {
   border: none;
   width: 100%;
-  min-height: 42px;
+  min-height: 48px;
   background-color: #fff;
   text-align: center; }
+
+.text-size {
+  font-size: 25px; }
 
 .input-search:focus {
   outline: none; }
@@ -330,10 +333,20 @@ html:-ms-fullscreen {
   margin-right: auto;
   margin-left: auto; }
 
+.watch-container {
+  width: 100%;
+  padding-right: 250px;
+  padding-left: 250px;
+  margin-right: auto;
+  margin-left: auto; }
+
 @media (min-width: 320px) {
   .margin-logo {
     margin-left: 20px !important;
-    margin-right: 20px !important; } }
+    margin-right: 20px !important; }
+  .watch-container {
+    padding-right: 0px;
+    padding-left: 0px; } }
 
 @media (min-width: 576px) {
   .container {
@@ -342,7 +355,10 @@ html:-ms-fullscreen {
     max-width: 576px !important; }
   .margin-logo {
     margin-left: 20px !important;
-    margin-right: 20px !important; } }
+    margin-right: 20px !important; }
+  .watch-container {
+    padding-right: 10px;
+    padding-left: 10px; } }
 
 @media (min-width: 768px) {
   .container {
@@ -351,7 +367,10 @@ html:-ms-fullscreen {
     max-width: 680px !important; }
   .margin-logo {
     margin-left: 200px !important;
-    margin-right: 200px !important; } }
+    margin-right: 200px !important; }
+  .watch-container {
+    padding-right: 20px;
+    padding-left: 20px; } }
 
 @media (min-width: 1024px) {
   .container {
@@ -360,7 +379,10 @@ html:-ms-fullscreen {
     max-width: 680px !important; }
   .margin-logo {
     margin-left: 280px !important;
-    margin-right: 280px !important; } }
+    margin-right: 280px !important; }
+  .watch-container {
+    padding-right: 120px;
+    padding-left: 120px; } }
 
 @media (min-width: 1200px) {
   .container {
@@ -374,8 +396,16 @@ html:-ms-fullscreen {
   .feed-container {
     max-width: 680px !important; }
   .margin-logo {
-    margin-left: 350px !important;
-    margin-right: 350px !important; } }
+    margin-left: 250px !important;
+    margin-right: 250px !important; }
+  .watch-container {
+    padding-right: 360px;
+    padding-left: 360px; } }
+
+@media (min-width: 1600px) {
+  .watch-container {
+    padding-right: 560px;
+    padding-left: 560px; } }
 
 .notify-container {
   position: fixed;
@@ -401,3 +431,15 @@ html:-ms-fullscreen {
   /* Ширина слоя */
   z-index: 1000;
   -webkit-transform: translate3d(0, 0, 0); }
+
+.divider-margin-bottom {
+  margin-bottom: 0% !important; }
+
+.divider-margin-top {
+  margin-top: 0% !important; }
+
+.background-color {
+  background-color: #eee !important; }
+
+.background-color:hover {
+  background-color: #fafafa !important; }
