--- a/public/style.css
+++ b/public/style.css
@@ -27,9 +27,20 @@
 .video-container {
   position: relative; }
 
+.loading {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: #000; }
+
+.App-logo-player {
+  animation: App-logo-spin-player infinite 1s linear;
+  height: 80px; }
+
 .figure-custom {
   width: 100%;
-  height: auto; }
+  height: auto;
+  margin: 0 !important; }
 
 .video {
   position: relative;
@@ -211,6 +222,30 @@ html:-ms-fullscreen {
   vertical-align: middle;
   position: absolute;
   padding-top: 6px; }
+
+@-moz-keyframes App-logo-spin-player {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@-webkit-keyframes App-logo-spin-player {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@-o-keyframes App-logo-spin-player {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@keyframes App-logo-spin-player {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
 
 .custom-icon {
   width: 22px; }
