--- a/src/assets/stylesheets/videoPlayer.scss
+++ b/src/assets/stylesheets/videoPlayer.scss
@@ -1,11 +1,30 @@
 .video-container{
   position: relative;
 }
+
+.loading{
+  width: 100%;
+  height: 100%
+  position relative;
+  background-color: black;
+}
+.App-logo-player {
+  animation: App-logo-spin-player infinite 1s linear;
+  height: 80px;
+}
+
+@keyframes App-logo-spin-player {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
 .figure-custom {
 	// max-width:1024px;
-	// max-width:64rem;
+  // max-width:64rem;
+  //max-height: 365px;
 	width:100%;
-	height:auto;
+  height:auto;
+  margin: 0 !important;
 	// margin:20px 0 0;
 	// margin:1.25rem 0 0;
 }
