--- a/public/style.css
+++ b/public/style.css
@@ -247,6 +247,9 @@ html:-ms-fullscreen {
   to {
     transform: rotate(360deg); } }
 
+body {
+  background-color: #f5f5f5 !important; }
+
 .custom-icon {
   width: 22px; }
 
@@ -273,7 +276,9 @@ html:-ms-fullscreen {
   text-decoration: none !important; }
 
 .card-custom {
-  margin-bottom: 30px !important; }
+  margin-bottom: 30px !important;
+  margin-right: 0px !important;
+  margin-left: 0px !important; }
 
 .App-logo {
   position: fixed;
@@ -343,7 +348,7 @@ html:-ms-fullscreen {
   width: 480px; }
 
 .custom-card-border {
-  border: 1px solid #d0d9e8 !important; }
+  border: 1px none #d0d9e8 !important; }
 
 .video-slot {
   position: relative;
@@ -485,6 +490,53 @@ html:-ms-fullscreen {
 
 .bg-hover:hover {
   background-color: #c7c7c7 !important; }
+
+.channel-name {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  margin: 0px !important; }
+
+.channel-name-upper {
+  position: absolute;
+  height: 50px;
+  width: 100%;
+  margin: 0px 0px 0px 0px !important;
+  background-color: rgba(255, 255, 255, 0); }
+
+.channel-name-lower {
+  position: absolute;
+  height: 50px;
+  width: 100%;
+  margin: 50px 0px 0px 0px !important;
+  background-color: #fff;
+  border-top: 1px none #d0d9e8 !important;
+  border-top-left-radius: 9px;
+  border-top-right-radius: 9px; }
+
+.channel-name-avatar {
+  position: absolute;
+  border-radius: 50% !important;
+  border: 3px solid #fff !important;
+  height: 100%;
+  z-index: 10; }
+
+.channel-name-button {
+  position: absolute;
+  width: 120px;
+  height: 40px;
+  margin: 30px 0px 0px 0px;
+  border: none;
+  outline: none !important;
+  color: #fff;
+  font-size: 20px;
+  font-family: "Brush Script MT, Brush Script Std, cursive";
+  text-decoration: none;
+  border: 3px solid #fff !important;
+  background: linear-gradient(to right, #f00, #f60);
+  border-radius: 100px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
+  z-index: 10; }
 
 @-moz-keyframes App-logo-spin {
   from {
