start to add redux remake cards

--- a/public/style.css
+++ b/public/style.css
@@ -538,6 +538,9 @@ body {
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
   z-index: 10; }
 
+.button-panel-btn {
+  background-color: rgba(255, 255, 255, 0); }
+
 @-moz-keyframes App-logo-spin {
   from {
     transform: rotate(0deg); }
