--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -365,7 +365,7 @@ body{
     height: 50px;
     width: 100%;
     margin: 50px 0px 0px 0px!important;
-    background-color: rgb(255, 255, 255);
+    background-color: #ffffff;
     border-top: 1px none #d0d9e8 !important;
     // border-bottom: 0px !important;
     //border-radius: 9px;
@@ -400,4 +400,8 @@ body{
     border-radius: 100px;
     box-shadow: 0px 0px 0px rgba(0,0,0,0.5);
     z-index: 10;
+}
+
+.button-panel-btn{
+    background-color: #ffffff00;
 }
