--- a/public/style.css
+++ b/public/style.css
@@ -247,6 +247,47 @@ html:-ms-fullscreen {
   to {
     transform: rotate(360deg); } }
 
+.dropdown-menu-custom {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  float: left;
+  min-width: 20rem;
+  padding: 0.5rem 0;
+  margin: 0.125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: transparent;
+  background-clip: padding-box;
+  border-radius: 0.25rem; }
+
+.menu-name-upper {
+  position: absolute;
+  height: 50px;
+  width: 100%;
+  margin: 0px 0px 0px 0px !important;
+  background-color: rgba(255, 255, 255, 0); }
+
+.menu-name-lower {
+  position: absolute;
+  height: 70px;
+  width: 100%;
+  margin: 50px 0px 0px 0px !important;
+  background-color: #fff;
+  border-top: 1px none #d0d9e8 !important;
+  border-top-left-radius: 9px;
+  border-top-right-radius: 9px; }
+
+.menu-name-avatar {
+  position: absolute;
+  border-radius: 50% !important;
+  border: 3px solid #fff !important;
+  height: 100%;
+  z-index: 10; }
+
 body {
   background-color: #f5f5f5 !important; }
 
@@ -482,6 +523,12 @@ body {
 .divider-margin-top {
   margin-top: 0% !important; }
 
+.test1 {
+  background-color: #000 !important; }
+
+.bg-color-menu {
+  background-color: #fff !important; }
+
 .background-color {
   background-color: #e0e0e0 !important; }
 
@@ -540,6 +587,16 @@ body {
 
 .button-panel-btn {
   background-color: rgba(255, 255, 255, 0); }
+
+.navbar-background {
+  background: linear-gradient(to right, #f60, #f30); }
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }
+
+.transiton-component {
+  background-color: rgba(255, 255, 255, 0) !important;
+  border: 0px !important; }
 
 @-moz-keyframes App-logo-spin {
   from {
