--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -1,6 +1,7 @@
 @import './search';
 @import './scrollbar';
 @import './videoPlayer';
+@import './dropdownmenu';
 
 body{
     background-color: rgb(245, 245, 245) !important;
@@ -327,6 +328,13 @@ body{
 .divider-margin-top{
     margin-top: 0% !important;
 }
+.test1{
+    background-color: rgb(0, 0, 0) !important;
+}
+
+.bg-color-menu{
+    background-color: #ffffff !important;
+}
 
 .background-color{
     background-color: rgb(224, 224, 224) !important;
@@ -404,4 +412,21 @@ body{
 
 .button-panel-btn{
     background-color: #ffffff00;
+}
+
+.navbar-background{
+    background: linear-gradient(to right, rgb(255, 102, 0),  rgb(255, 51, 0));
+}
+
+// .custom-toggler .navbar-toggler {
+//     border-color: rgb(255, 255, 255);
+// }
+
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+
+.transiton-component{
+    background-color: #ffffff00 !important;
+    border: 0px !important;
 }
