--- a/public/style.css
+++ b/public/style.css
@@ -338,7 +338,7 @@ body {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
   background-color: #fff;
-  border-bottom: 1px solid #dcdcdc;
+  border-bottom: 1px solid #ff2d11;
   -webkit-transform: translate3d(0, 0, 0); }
 
 .navbar-guest-custom {
@@ -601,11 +601,15 @@ body {
 
 .transiton-component {
   background-color: rgba(255, 255, 255, 0) !important;
-  border: 0px !important; }
+  border: 0px !important;
+  padding: 0 !important; }
 
 .search-border {
   border-top: 1px solid #dcdcdc;
   border-bottom: 1px solid #dcdcdc; }
+
+.shadow-menu {
+  box-shadow: 0 6px 2px -2px #646464 !important; }
 
 @-moz-keyframes App-logo-spin {
   from {
