--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -83,7 +83,7 @@ body{
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     background-color: #fff;
-    border-bottom: 1px solid rgb(220, 220, 220); 
+    border-bottom: 1px solid rgb(255, 45, 17); 
     -webkit-transform: translate3d(0, 0, 0);
 }
 .navbar-guest-custom{
@@ -435,9 +435,14 @@ body{
 .transiton-component{
     background-color: #ffffff00 !important;
     border: 0px !important;
+    padding: 0 !important;
 }
 
 .search-border{
     border-top : 1px solid rgb(220, 220, 220);
     border-bottom : 1px solid rgb(220, 220, 220);
+}
+
+.shadow-menu{
+    box-shadow: 0 6px 2px -2px rgb(100,100,100,0.1) !important; 
 }
