--- a/public/style.css
+++ b/public/style.css
@@ -611,6 +611,13 @@ body {
 .shadow-menu {
   box-shadow: 0 6px 2px -2px #646464 !important; }
 
+.fpp {
+  position: absolute; }
+
+@media only screen and (min-width: 845px) {
+  .hide-slidemenu {
+    display: none !important; } }
+
 @-moz-keyframes App-logo-spin {
   from {
     transform: rotate(0deg); }
