--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -451,9 +451,9 @@ body{
     position: absolute;
 }
 
-@media only screen and (min-width : 845px) {
-    .hide-slidemenu{
-        display: none !important;
-    }
+// @media only screen and (min-width : 845px) {
+//     .hide-slidemenu{
+//         display: none !important;
+//     }
 
-}
+// }
