--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -444,7 +444,7 @@ body{
 }
 
 .shadow-menu{
-    box-shadow: 0 6px 2px -2px rgb(100,100,100,0.1) !important; 
+    box-shadow: 0 0 10px rgba(0,0,0,0.5) !important; 
 }
 
 .fpp{
@@ -457,3 +457,44 @@ body{
 //     }
 
 // }
+.zzz{
+    z-index: 99999;
+}
+
+.triangle-top{
+    position: absolute;
+    left: 77.3%;
+    top: -20px;
+    width: 0;
+    height: 0;
+    content: '';
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid #ffffff;
+}
+.top-avatar{
+	position: absolute;
+	//width: 100%; 
+	border-radius: 50% !important;
+	border: 3px solid #ffffff !important;
+	height: 100%;
+	z-index: 10;
+	left: 20%;
+	top: -50px;
+	// width: 0;
+	// height: 0;
+}
+
+.top-panel-menu{
+	position: relative;
+	width: 100%;
+	height: 50px;
+	margin: 0px !important;
+	background-color: #ffffff;
+	// display: flex ;
+	// flex-direction: row ;
+	// flex-wrap: wrap ;
+	// justify-content: space-around ;
+	// align-items: center ;
+	// align-content: center ;
+}
