--- a/public/style.css
+++ b/public/style.css
@@ -1,28 +1,15 @@
 @charset "UTF-8";
 .input-search {
   border: none;
-  width: 100%;
   min-height: 48px;
-  background-color: #fff;
-  text-align: center; }
+  text-align: left;
+  margin-left: 5px; }
 
 .text-size {
-  font-size: 25px; }
+  font-size: 16px; }
 
 .input-search:focus {
   outline: none; }
-
-.input-search:-moz-placeholder {
-  padding-left: 50px; }
-
-.input-search::-moz-placeholder {
-  padding-left: 50px; }
-
-.input-search:-ms-input-placeholder {
-  padding-left: 50px; }
-
-.input-search::-webkit-input-placeholder {
-  padding-left: 50px; }
 
 .video-container {
   position: relative; }
@@ -609,7 +596,9 @@ body {
   border-bottom: 1px solid #dcdcdc; }
 
 .shadow-menu {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5) !important; }
+  -webkit-box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
+  -moz-box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
+  box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important; }
 
 .fpp {
   position: absolute; }
