--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -444,7 +444,9 @@ body{
 }
 
 .shadow-menu{
-    box-shadow: 0 0 10px rgba(0,0,0,0.5) !important; 
+    -webkit-box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
+    -moz-box-shadow:    0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
+    box-shadow:         0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
 }
 
 .fpp{
