--- a/public/style.css
+++ b/public/style.css
@@ -325,8 +325,7 @@ body {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
   background-color: #fff;
-  border-bottom: 1px solid #ff2d11;
-  -webkit-transform: translate3d(0, 0, 0); }
+  border-bottom: 1px solid #ff2d11; }
 
 .navbar-guest-custom {
   min-height: 48px;
@@ -632,6 +631,9 @@ body {
   height: 50px;
   margin: 0px !important;
   background-color: #fff; }
+
+.drawer-menu {
+  overflow-x: hidden !important; }
 
 @-moz-keyframes App-logo-spin {
   from {
