--- a/public/style.css
+++ b/public/style.css
@@ -568,7 +568,7 @@ body {
   outline: none !important;
   color: #fff;
   font-size: 20px;
-  font-family: "Brush Script MT, Brush Script Std, cursive";
+  font-family: "forte";
   text-decoration: none;
   border: 3px solid #fff !important;
   background: linear-gradient(to right, #f00, #f60);
@@ -595,6 +595,7 @@ body {
   border-bottom: 1px solid #dcdcdc; }
 
 .shadow-menu {
+  border: 0px !important;
   -webkit-box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
   -moz-box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important;
   box-shadow: 0px 15px 8px -3px rgba(50, 50, 50, 0.75) !important; }
